--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ pandas==1.4.2
 scikit_learn==1.0.2
 tensorflow==2.8.1
 toml==0.10.2
-torch==1.7.1
 tqdm==4.64.0
 transformers==4.18.0
+seqeval==0.0.12
+pytorch-crf==0.7.2
+pyctcdecode==0.1.0
